# rcli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  deny.toml
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64.rs  csv.rs  genpass.rs  mod.rs
src/process/: b64.rs  csv_convent.rs  gen_pass.rs  mod.rs
