[package]
authors = ["luowen <757130778@qq.com>"]
edition = "2021"
name = "rcli"
version = "0.1.0"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = "4.5.13", features = ["derive"]}
csv = "1.3.0"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.122"
