[package]
authors = ["luowen <757130778@qq.com>"]
edition = "2021"
name = "rcli"
version = "0.1.0"
license = "MIT"


[dependencies]
anyhow = "1.0.91"
clap = {version = "4.5.20", features = ["derive"]}
csv = "1.3.0"
rand = "0.8.5"
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
serde_yaml = "0.9.33"
